gccida/g1/output_constructor
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5157:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5170:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *size_unit; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5176:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5179:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5180:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5181:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5182:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5183:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5184:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5202:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *min_index; // [rsp+30h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5293:20: error: expected expression
v23 = ( tree_node *)v22[7]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5293:9: error: use of undeclared identifier 'tree_node'
v23 = ( tree_node *)v22[7]; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5316:20: error: expected expression
v23 = ( tree_node *)v25; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5316:9: error: use of undeclared identifier 'tree_node'
v23 = ( tree_node *)v25; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5320:20: error: expected expression
v23 = ( tree_node *)v25; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5320:9: error: use of undeclared identifier 'tree_node'
v23 = ( tree_node *)v25; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/varasm.c:5382:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( rtl[1] == 113 ) 
     ~~~~~~ ^  ~~~
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constructor/src/obj/varasm.o] Error 1
